# ANTIGRAVITY-PROMPT-SHOWDOWN

./: .gitignore  README.md
GPT 5.2/timecapsule/: .gitignore  README.md  benchmark.md  pyproject.toml
GPT 5.2/timecapsule/scripts/: generate_sample.sh
GPT 5.2/timecapsule/src/timecapsule/: __init__.py  cli.py  database.py  doctor.py  embeddings.py  indexer.py  ingest.py  keyframes.py  search.py  server.py  transcribe.py
GPT 5.2/timecapsule/static/: index.html
GPT 5.2/timecapsule/tests/: test_database.py  test_pipeline.py  test_search.py
Gemini 3 Pro/entropy_garden/: Optimization_Log.md  start_garden.sh
Gemini 3 Pro/entropy_garden/backend/: pyproject.toml
Gemini 3 Pro/entropy_garden/backend/src/: __init__.py  entropy.py  main.py  models.py  telemetry.py
Gemini 3 Pro/entropy_garden/backend/src/entropy_garden_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Gemini 3 Pro/entropy_garden/backend/tests/: test_entropy.py
Gemini 3 Pro/entropy_garden/docs/: README_Entropy_Garden.md
Gemini 3 Pro/entropy_garden/frontend/: index.html  package-lock.json  package.json  vite.config.ts
Gemini 3 Pro/entropy_garden/frontend/src/: e8lattice.ts  main.ts  perf.ts  renderer.ts  websocket.ts
Grok 4.1/quantum_navigator/: GPU_DIAGNOSTICS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
Grok 4.1/quantum_navigator/src/: e8lattice.ts  main.ts  player.ts  quantum.ts
KIMI K2/quantum_compression/: .gitignore  Cargo.toml  README.md  build_popos.sh  install_rust.sh
KIMI K2/quantum_compression/benches/: vs_zlib.rs
KIMI K2/quantum_compression/cuda_kernels/: mps_kernel.cu
KIMI K2/quantum_compression/dashboard/: index.html
KIMI K2/quantum_compression/src/: compress.rs  error.rs  huffman.rs  lib.rs  mps.rs
KIMI K2/quantum_compression/tests/: edge_cases.rs
QuantumResearchPipeline/: .coverage  README.md  docker-compose.yml  pyproject.toml  quantum_simulator.py
QuantumResearchPipeline/models/: training_history.json
QuantumResearchPipeline/papers/: selected_for_simulation.json
QuantumResearchPipeline/tests/: test_scraper.py
Sonar/QuantumResearchPipeline/: Dockerfile.streamlit  README.md  arxiv_scraper.py  requirements.txt  vision_trainer.py
Sonar/QuantumResearchPipeline/dashboard/: app.py
Sonar/QuantumResearchPipeline/models/: sample_predictions.json
Sonar/QuantumResearchPipeline/notebooks/: quantum_analysis.ipynb
Sonar/QuantumResearchPipeline/papers/: metadata.json
Sonar/QuantumResearchPipeline/simulations/: simulation_results.json
Sonar/QuantumResearchPipeline/tests/: test_quantum.py
Sonnet 4.5/compression_lab/: README.md
Sonnet 4.5/compression_lab/benchmarks/: dataset_gen.py  harness.py
Sonnet 4.5/compression_lab/dashboard/: index.html  server.py
Sonnet 4.5/compression_lab/results/: benchmarks.db
Sonnet 4.5/compression_lab/scripts/: build.sh  run_benchmarks.sh
Sonnet 4.5/compression_lab/src/cuda/: arithmetic_coding.cu  common.cuh  e8_lattice.cu  lz77_parallel.cu
dashboard/: app.js  index.html  styles.css
