[package]
name = "quantum_compression"
version = "0.1.0"
edition = "2021"
authors = ["Antigravity Research"]
description = "Quantum-inspired compression using MPS tensor networks and adaptive Huffman coding"
license = "MIT"

[dependencies]
ndarray = "0.16"
num-complex = "0.4"
rayon = "1.10"
flate2 = "1.0"  # For zlib comparison
bitvec = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
tempfile = "3.14"

[[bench]]
name = "vs_zlib"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
